viffw 1.4.0
- Using Java 21.
- Using closable functionality of java.sql.Connection.