@@ -36,16 +36,16 @@ public class KeyObjectImplTest {
     }
 
     @Test
-    public void testCreate() throws VException {
+    void testCreate() throws VException {
         final DomainObjectHome lHome = DataHouseKeeper.INSTANCE.getSimpleHome();
 
         final KeyObject lKey1 = new KeyObjectImpl();
-        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(12));
+        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(12));
         assertNotNull(lKey1);
         assertEquals("tblTest.FAMOUNT = 12", new String(lKey1.render2(lHome)));
 
         final KeyObject lKey2 = new KeyObjectImpl();
-        lKey2.setValue(Test2DomainObjectHomeImpl.KEY_DOUBLE, new Integer(100));
+        lKey2.setValue(Test2DomainObjectHomeImpl.KEY_DOUBLE, Integer.valueOf(100));
         lKey2.setValue(lKey1);
         assertNotNull(lKey2);
         assertEquals(2, lKey2.size());
@@ -58,9 +58,9 @@ public class KeyObjectImplTest {
         assertTrue(!lKey2.isPrimaryKey());
 
         final KeyObject lKey3 = new KeyObjectImpl();
-        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(101));
+        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(101));
         lKey3.setValue(lKey1);
-        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(100));
+        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(100));
         assertEquals(
                 "tblTest.FAMOUNT = 101 AND (tblTest.FAMOUNT = 12) AND tblTest.FAMOUNT = 100",
                 new String(lKey3.render2(lHome)));
@@ -85,8 +85,8 @@ public class KeyObjectImplTest {
                 new String(lKey.render2(lHome)));
 
         lKey = new KeyObjectImpl();
-        final SQLRange lIn = new InObjectImpl<Integer>(new Integer[] { new Integer(65), new Integer(77),
-                new Integer(87), new Integer(99) });
+        final SQLRange lIn = new InObjectImpl<Integer>(new Integer[] { Integer.valueOf(65), Integer.valueOf(77),
+                Integer.valueOf(87), Integer.valueOf(99) });
         lKey.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, lIn);
         assertEquals(
                 "tblTest.FAMOUNT IN (65, 77, 87, 99)",
@@ -94,14 +94,14 @@ public class KeyObjectImplTest {
 
         // if we pass a collection, the key object creates a InObjectImpl() internally
         final Vector<Integer> lValues = new Vector<Integer>();
-        Collections.addAll(lValues, new Integer(65), new Integer(77), new Integer(87), new Integer(99));
+        Collections.addAll(lValues, Integer.valueOf(65), Integer.valueOf(77), Integer.valueOf(87), Integer.valueOf(99));
         lKey = new KeyObjectImpl();
         lKey.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, lValues);
         assertEquals("tblTest.FAMOUNT IN (65, 77, 87, 99)", new String(lKey.render2(lHome)));
     }
 
     @Test
-    public void testRender() throws VException {
+    void testRender() throws VException {
         final DomainObjectHome lHome = DataHouseKeeper.INSTANCE.getSimpleHome();
 
         KeyObject lKey1 = new KeyObjectImpl();
@@ -117,14 +117,13 @@ public class KeyObjectImplTest {
 
         lKey1.setValue(lKey2, BinaryBooleanOperator.OR);
         assertEquals(
-                "key 2",
                 "tblTest.SNAME LIKE 'Ha%' OR tblTest.SFIRSTNAME LIKE 'Ha%' OR (tblTest.SNAME LIKE 'A%' AND tblTest.SFIRSTNAME LIKE 'B%')",
                 new String(lKey1.render2(lHome)));
 
         final KeyObject lKey3 = new KeyObjectImpl();
         lKey3.setValue(Test2DomainObjectHomeImpl.KEY_NAME, "Ha%", "LIKE");
         lKey3.setValue(Test2DomainObjectHomeImpl.KEY_FIRSTNAME, "Ha%", "LIKE", BinaryBooleanOperator.OR);
-        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(87));
+        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(87));
         assertEquals(
                 "(tblTest.SNAME LIKE 'Ha%' OR tblTest.SFIRSTNAME LIKE 'Ha%') AND tblTest.FAMOUNT = 87",
                 new String(lKey3.render2(lHome)));
@@ -149,17 +148,17 @@ public class KeyObjectImplTest {
     }
 
     @Test
-    public void testRenderPrepared() throws VException {
+    void testRenderPrepared() throws VException {
         final DomainObjectHome lHome = DataHouseKeeper.INSTANCE.getSimpleHome();
         final IGetValueStrategy lGetValueStrategy = new PreparedValueStrategy();
 
         KeyObject lKey1 = new KeyObjectImpl();
-        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(12));
+        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(12));
         lKey1.setGetValueStrategy(lGetValueStrategy);
         assertEquals("tblTest.FAMOUNT = ?", new String(lKey1.render2(lHome)));
 
         final KeyObject lKey2 = new KeyObjectImpl();
-        lKey2.setValue(Test2DomainObjectHomeImpl.KEY_DOUBLE, new Integer(100));
+        lKey2.setValue(Test2DomainObjectHomeImpl.KEY_DOUBLE, Integer.valueOf(100));
         lKey2.setValue(lKey1);
         lKey2.setGetValueStrategy(lGetValueStrategy);
         assertEquals(
@@ -167,17 +166,17 @@ public class KeyObjectImplTest {
                 new String(lKey2.render2(lHome)));
 
         KeyObject lKey3 = new KeyObjectImpl();
-        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(101));
+        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(101));
         lKey3.setValue(lKey1);
-        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(100));
+        lKey3.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(100));
         lKey3.setGetValueStrategy(lGetValueStrategy);
         assertEquals(
                 "tblTest.FAMOUNT = ? AND (tblTest.FAMOUNT = ?) AND tblTest.FAMOUNT = ?",
                 new String(lKey3.render2(lHome)));
 
         lKey1 = new KeyObjectImpl();
-        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, new Integer(12));
-        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_DOUBLE, new Integer(20));
+        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, Integer.valueOf(12));
+        lKey1.setValue(Test2DomainObjectHomeImpl.KEY_DOUBLE, Integer.valueOf(20));
         lKey3 = new KeyObjectImpl();
         lKey3.setValue(Test2DomainObjectHomeImpl.KEY_CITY, "City");
         lKey3.setValue(Test2DomainObjectHomeImpl.KEY_PLZ, "PLZ");
@@ -199,8 +198,8 @@ public class KeyObjectImplTest {
                 new String(lKey.render2(lHome)));
 
         lKey = new KeyObjectImpl();
-        final SQLRange lIn = new InObjectImpl<Integer>(new Integer[] { new Integer(65), new Integer(77),
-                new Integer(87), new Integer(99) });
+        final SQLRange lIn = new InObjectImpl<Integer>(new Integer[] { Integer.valueOf(65), Integer.valueOf(77),
+                Integer.valueOf(87), Integer.valueOf(99) });
         lKey.setValue(Test2DomainObjectHomeImpl.KEY_AMOUNT, lIn);
         lKey.setGetValueStrategy(lGetValueStrategy);
         assertEquals(
@@ -209,10 +208,10 @@ public class KeyObjectImplTest {
     }
 
     @Test
-    public void testSort() throws VException {
+    void testSort() throws VException {
         final String[] lExpected = { "field1", "__keyObject(VIF)", "field2", "field3" };
         final KeyObject lKey = new KeyObjectImpl();
-        lKey.setValue(lExpected[0], new Integer(12), "=", BinaryBooleanOperator.AND);
+        lKey.setValue(lExpected[0], Integer.valueOf(12), "=", BinaryBooleanOperator.AND);
         final KeyObject lKeyInner = new KeyObjectImpl();
         lKeyInner.setValue(lExpected[2], "Test", "=");
         lKeyInner.setValue(lExpected[3], "test", "=", BinaryBooleanOperator.OR);
